taskmaster-deployment.yaml
# taskmaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmaster-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmaster
  template:
    metadata:
      labels:
        app: taskmaster
    spec:
      containers:
      - name: taskmaster-service
        image: taskmaster-service
        ports:
        - containerPort: 3000
